[package]
name = "lookr"
version = "0.1.0"
authors = ["Ryan Thomas <ryan@ryant.org>"]
edition = "2018"
description = "Client binary for the lookrd daemon locate tool."
license = "MIT"
keywords = ["locate"]
categories = ["command-line-utilities"]

[dependencies]
lookrd =  { path = "../lookr-daemon" }  

clap = "2.33"
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.2"