[package]
name = "lookrd"
version = "0.1.1"
authors = ["Ryan Thomas <ryan@ryant.org>"]
edition = "2018"
description = "Lookr daemon for the lookr locate service."
license = "MIT"
keywords = ["locate"]
categories = ["command-line-utilities"]

[dependencies]
clap = "2.33"
dirs = "2"
log = "0.4"
notify = "4.0"
pretty_env_logger = "0.4"
prost = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tantivy = "0.12"
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.2"
walkdir = "2"

[build-dependencies]
tonic-build = "0.2"